@@ -8,6 +8,8 @@ versions of PyAMF.
 
 0.5 (unreleased)
 ----------------
+ - Replaced hardcoded Python implementation title in p.r.gateway.SERVER_NAME
+   (Ticket:541)
  - Provide a user friendly way to handle datetime.time objects (Ticket:498)
  - Removed the useless pyamf.logging module (Ticket:577)
  - Added a new register_package helper function to make bulk class
